--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   tests:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: macos-10.5
     
     # Steps are the tasks that the job will execute
     steps:
